--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - reservas-application-backend
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./frontend/dist/angular/:/usr/share/nginx/html
+      - ./frontend/dist/:/usr/share/nginx/html
     networks:
       - frontendNetwork
 
