--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,7 +63,9 @@
     "sortablejs": "^1.15.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "ngx-webstorage": "^6.0.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
